--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:ICtU5wE9LOKCP3Lidw7ivKNxu+UJH7OxP2Er6X6Pseg=
 APP_DEBUG=true
-APP_URL=https://c2a9-84-54-92-247.ngrok-free.app
+APP_URL=https://132e-84-54-92-247.ngrok-free.app/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -56,3 +56,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_LOGIN=username
+API_PASSWORD=secret
