--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:ICtU5wE9LOKCP3Lidw7ivKNxu+UJH7OxP2Er6X6Pseg=
 APP_DEBUG=true
-APP_URL=https://132e-84-54-92-247.ngrok-free.app/
+APP_URL=https://2a0f-83-222-6-254.ngrok-free.app/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
